xine-lib (1-rc6)
  * move win32 frontend into separate module
  * fix Xv initialization to enable multiple instances of the Xv plugin

xine-lib (1-rc5)  
  * add support for ejecting removable media on Solaris
  * fix stuttering playback of some realmedia streams
  * fix end of stream handling in the http plugin
  * add support for 24bit and 32bit Float for audio.
  * add support for upmixing. Currently only stereo -> Surround 5.1
  * Software decode for DTS audio updated for Surround 5.1 output.
  * fixed compilation of libmad on AMD64
  * fixed double-free in the yuv decoder (fixes crashes when switching
    away from v4l:/ MRLs)
  * removed -funroll-all-loops from SPARC and PPC targets as it negatively
    affected performance
  * priority support for demuxer and input plugins
  * smoother seeking
  * fix seeking with the qt dll decoder
  * support AAC audio in AVI
  * slow down CD drive during CD audio playback to reduce noise
  * fix some crashes disposing win32 codecs
  * fix reception of the last bytes in a http connection
    (fixes parsing of reference/playlist files using http, eg .ram)
  * fix time displaying for flac files
  * fix playback of some broken ASF streams
  * DXR3: fix crash after playing non-MPEG content
  * add support for XVR-100 (Radeon-based) framebuffers to video_out_pgx64
  * support DTS audio in AVI
  * revised FLAC playback subsystem
  * subtitles improvements - word wrap and new subtitle format variants
  * native MacOSX video and audio output plugins
  * DXR3: fix slight shaking in lower third of the image on TV out
    with some MPEG material
  * fix falling back from multi-buffering in video_out_pgx64
  * fix DVD playback from a specified title/part with
    dvd:/<title>.<part> MRLs

xine-lib (1-rc4a)
  * audio out now uses a more user friendly "Speaker arrangement" config item;
    this defaults to stereo, so if you use a different speaker arragement, like