@@ -1,6 +1,9 @@
 xine-lib (1-rc6)
   * move win32 frontend into separate module
   * fix Xv initialization to enable multiple instances of the Xv plugin
+  * remove XInitThreads() call from some video out plugins, because it
+    might lead to undefined behaviour; calling XInitThreads() is entirely
+    the frontend's job
 
 xine-lib (1-rc5)  
   * add support for ejecting removable media on Solaris
